...
const String clubUpMockAdminId = 'mock-clubup';
const String clubUpMockEmail = 'clubup@ku.edu.tr';
const String clubUpMockPasscode = '11111111';

AppAdmin _newClubUpMockAdmin() => AppAdmin(
  id: clubUpMockAdminId,
  name: 'ClubUp',
  email: clubUpMockEmail,
  password: clubUpMockPasscode,
);

Club _newClubUpMockClub() => Club(
  id: clubUpMockAdminId,
...
